Changed function about most and least bought products from post to get
